修改删除评论后的跳转

--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -277,7 +277,7 @@
                         }),
                         success:function (result) {
                             if(result.code == 200){
-                                window.location.href = '/';
+                                window.location.reload();
                             }
                         },
                         dataType:"json"
