--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -396,7 +396,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <a href="javascript:check()" class="btn-login el-button" th:text="${oauthsType==null?'登录':'授权并登录'}"></a>
+                        <a href="javascript:check()" class="btn-login el-button" th:text="${oauthsType==null || oauthsType == ''?'登录':'授权并登录'}"></a>
                         <a th:href="@{/register}" class="btn-register el-button">注册</a>
                     </div>
                     <div class="form-group other-way-login">
@@ -406,13 +406,11 @@
                             <a class="github-login" title="GitHub授权登录"
                                th:href="@{https://github.com/login/oauth/authorize(client_id='a7984ce94e8e4c8c796d',redirect_uri=${#httpServletRequest.getRequestURL()+'Callback'},scope='user',state=1)}"><img src="/images/github.png"></a>
                             <a class="qq-login" title="qq授权登录" onclick="qqlogin()"><img src="/images/QQ.png"></a>
-                            <a class="weixin-login" title="微博授权登录"><img src="/images/weibo.png"></a>
-                            <a class="weixin-login" title="百度授权登录"><img src="/images/baidu1.png"></a>
                         </div>
                     </div>
-                    <input id="oauthsId" hidden="hidden" th:value="${oauthsId}">
-                    <input id="oauthsType" hidden="hidden" th:value="${oauthsType}">
-                    <input id="loginType" hidden="hidden" value="1">
+                    <input type="hidden" id="oauthsId"  th:value="${oauthsId}">
+                    <input type="hidden" id="oauthsType"   th:value="${oauthsType}">
+                    <input type="hidden" id="loginType" value="1">
                 </form>
             </div>
         </div>
