--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -10,7 +10,7 @@
     <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
     <script th:src="@{/layui/layui.js}" type="application/javascript"></script>
     <script th:src="@{/js/comment.js}" type="application/javascript"></script>
-    <script th:src="@{/js/editormd.min.js}" type="application/javascript"></script>
+    <script th:src="@{/js/editormd.js}" type="application/javascript"></script>
     <script src="https://ssl.captcha.qq.com/TCaptcha.js"></script>
     <script type="application/javascript">
         layui.use(['element','form','layer'],function () {
@@ -32,6 +32,15 @@
             });
         });
 
+        function tagCheck(value) {
+            for ( var i = 0; i <value.length; i++){
+                if(!value[i]){
+                    return true;
+                }
+            }
+            return false;
+        }
+
         function publishCheck() {
             layui.use('layer',function () {
                 var layer = layui.layer;
@@ -40,12 +49,19 @@
                 var tag = $("#tag").val();
                 var id = $("#id").val();
                 var options= $("#column option:selected");
+                var tagSplit = tag.split(",");
                 if(!title){
-                    layer.msg("问题标题不能为空");
+                    layer.msg("标题不能为空");
+                }else if(title.length >50){
+                    layer.msg("标题最多50个字符");
                 }else if(!description){
-                    layer.msg("问题描述不能为空");
+                    layer.msg("内容不能为空");
                 }else if(!tag){
                     layer.msg("标签不能为空");
+                }else if(tagCheck(tagSplit)){
+                    layer.msg("标签含有多余的逗号");
+                }else if(tagSplit.length >10){
+                    layer.msg("标签最多只能选择10个");
                 }else if(!options.val()){
                     layer.msg("请选择专栏");
                 }else{
@@ -129,8 +145,9 @@
                                     height: 350,
                                     path: "/js/lib/",
                                     delay: 0,
+                                    emoji:true,
                                     watch: false,
-                                    placeholder: "请输入问题描述",
+                                    placeholder: "请输入内容",
                                     imageUpload: true,
                                     imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
                                     imageUploadURL: "/file/upload",
