--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}">
     <link rel="stylesheet" th:href="@{/css/community.css}">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1654155_f02z4ux20qm.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_1654155_pdkxw2wuoy.css">
     <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
     <script th:src="@{/layui/layui.js}" type="application/javascript"></script>
     <script th:src="@{/js/comment.js}"></script>
@@ -39,7 +39,6 @@
                th:if="${session.user!=null && session.user.id != userInfo.id}" th:id="${userInfo.id}"
                th:data-id="${userInfo.id}" th:text="${followStatus == 0?'关注':(followStatus == 1?'已关注':'已互粉')}"
                th:classappend="${followStatus == 1 or followStatus == 2?'fansStatus':''}"></a>
-            <a href="javascript:;" class="layui-btn layui-btn-normal">私信</a>
             <input type="text" th:id="'status-'+${userInfo.id}" th:value="${followOtherStatus}" hidden="hidden">
         </div>
     </div>
@@ -161,7 +160,7 @@
                 <ul class="tree-collection" th:if="${questions != null}">
                     <li th:each="question:${questions}">
                         <h3>
-                            <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}"></a>
+                            <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}" class="text-hidden3"></a>
                         </h3>
                         <span class="tree-info-color">阅读数
                         <span style="color: #01AAED;" th:text="${question.viewCount}"></span> | 评论数
