--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -530,9 +530,9 @@
                 <h3 class="tree-panel-title">友情链接</h3>
                 <dl class="tree-panel-main">
                     <dd><a href="#">树洞社区</a></dd>
-                    <dd><a href="https://treedon.cn/" target="_blank">TreeDongForum</a></dd>
+                    <dd><a href="http://www.treedong.com/">TreeDongForum</a></dd>
                     <dd><a th:href="@{'tencent://Message'(Uin=2435663184,websiteName='local.edu.com:8888=',Menu='yes')}" target="_blank">联系站长</a></dd>
-                    <dd><a href="" target="_blank">社区源码</a></dd>
+                    <dd><a href="https://github.com/shaozihang/community">社区源码</a></dd>
                     <dd><a th:href="@{'tencent://Message'(Uin=2435663184,websiteName='local.edu.com:8888=',Menu='yes')}" target="_blank" class="tree-link">申请友链</a></dd>
                 </dl>
             </div>
